Prevent double taps from zooming in on iOS Safari

--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,5 @@
+body { touch-action: manipulation; }
+
 .Header {
   max-width: 600px;
 }
